--- a/scripts/conf/ftp/vsftpd.conf
+++ b/scripts/conf/ftp/vsftpd.conf
@@ -6,10 +6,14 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 28/03/2022
-# Versão: 0.04
+# Data de atualização: 19/04/2022
+# Versão: 0.05
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Vsftpd Server v3.0.x
+#
+# Porta padrão do Vsftpd Server em modo Autônomo (comentar depois de configurar
+# a Porta 990 do suporte ao FTPS (seguro) utilizando o TLS/SSL)
+listen_port=21
 #
 # Habilitar o suporte ao IPv4 do Vsftpd Server
 listen=YES
@@ -19,6 +23,14 @@ listen_ipv6=NO
 #
 # Permitir FTP anônimo do Vsftpd Server (desabilitado por padrão)
 anonymous_enable=NO
+#
+# EM DESENVOLVIMENTO E TESTES DE ACESSO DO VSFTPd SERVER VIA NAT EM MODO PASSIVO
+# OBSERVAÇÃO: the passive port number calculates to: (192 x 256) + 25 = 49177
+#pasv_enable=YES
+#pasv_addr_resolve=YES
+#pasv_address=WAN_IP_NAT
+#pasv_min_port=50000
+#pasv_max_port=50100
 #
 # Permitir que usuários locais façam login no Vsftpd Server
 local_enable=YES
@@ -40,13 +52,12 @@ log_ftp_protocol=YES
 xferlog_enable=YES
 xferlog_std_format=YES
 xferlog_file=/var/log/vsftpd.log
-debug_ssl=YES
 #
 # Habilitando o suporte do Syslog no Vsftp Server
 syslog_enable=YES
 #
 # Personalização do Banner do Vsftp Server.
-ftpd_banner=Bem-vindo ao Serviço de FTP do Bora para Pratica.
+ftpd_banner=Bem-vindo ao Servico de FTP do Bora para Pratica.
 #
 # Restrição dos usuários locais a seus diretórios pessoais no Vsftp Server.
 chroot_local_user=YES
@@ -55,7 +66,7 @@ allow_writeable_chroot=YES
 #chroot_list_file=/etc/vsftpd.chroot_list
 secure_chroot_dir=/var/run/vsftpd/empty
 #
-# Permitindo ou negando acesso ao Vsftp Server
+# Permitindo ou negando o acesso ao Vsftp Server
 userlist_enable=YES
 userlist_deny=NO
 userlist_file=/etc/vsftpd.allowed_users
@@ -73,13 +84,14 @@ max_per_ip=8
 pam_service_name=vsftpd
 #
 # Localização do certificado e chave RSA para conexão criptografada do Vsftp Server
-# Veja os procedimentos de criação de CA e Certificados nos scripts: 
+# Veja os procedimentos de criação de CA e Certificados nos scripts do OpenSSL: 
 # 12-A-openssl-ca.sh e 12-C-openssl-vsftdp.sh
 ssl_enable=NO
+debug_ssl=YES
+#listen_port=990
 #rsa_cert_file=/etc/ssl/newcerts/vsftpd.crt
 #rsa_private_key_file=/etc/ssl/private/vsftpd.key
 #implicit_ssl=YES
-#listen_port=990
 #allow_anon_ssl=NO
 #force_local_data_ssl=YES
 #force_local_logins_ssl=YES
