--- a/scripts/conf/ftp/vsftpd.conf
+++ b/scripts/conf/ftp/vsftpd.conf
@@ -30,11 +30,11 @@ pasv_enable=YES
 pasv_min_port=50000
 pasv_max_port=50100
 #
-# Configuaração do Modo Passivo do Vsftpd Server para suporte o acesso remoto
+# Configuaração do Modo Passivo do Vsftpd Server para suportar o acesso remoto
 # utilizando o Redirecionamento de Porta via NAT (Network Address Translation)
 # EM DESENVOLVIMENTO E TESTES DE ACESSO DO VSFTPd SERVER VIA NAT EM MODO PASSIVO
 #pasv_addr_resolve=YES
-#pasv_address=WAN_IP_NAT
+#pasv_address=WAN_IP_NAT_ou_DNS_FQDN
 #
 # Personalização do Banner do Vsftp Server.
 ftpd_banner=Bem-vindo ao Servico de FTP do Bora para Pratica.
