--- a/scripts/conf/ftp/vsftpd.conf
+++ b/scripts/conf/ftp/vsftpd.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 19/04/2022
-# Versão: 0.05
+# Data de atualização: 28/04/2022
+# Versão: 0.06
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Vsftpd Server v3.0.x
 #
@@ -28,7 +28,7 @@ anonymous_enable=NO
 # conexão remota para o envio e recebimentos de arquivos.
 pasv_enable=YES
 pasv_min_port=50000
-pasv_max_port=50100
+pasv_max_port=55000
 #
 # Configuaração do Modo Passivo do Vsftpd Server para suportar o acesso remoto
 # utilizando o Redirecionamento de Porta via NAT (Network Address Translation)
@@ -107,3 +107,11 @@ debug_ssl=YES
 #
 # Habilitando o suporte ao sistema de arquivos utf8 no Vsftp Server
 utf8_filesystem=YES
+#
+# EM DESENVOLVIMENTO E TESTES PARA RESOLVER O PROBLEMA DE CRIAÇÃO DE ARQUIVOS
+# UTILIZANDO O MICROSOFT WINDOWS EXPLORER EM RELAÇÃO AO MODO PASSIVO DE CONEXÃO
+# COM O SERVIDOR DE VSFTPd SERVER.
+# ascii_download_enable=YES
+# ascii_upload_enable=YES
+# connect_from_port_20=NO
+# nopriv_user=ftpuser
