--- a/scripts/conf/ftp/vsftpd.conf
+++ b/scripts/conf/ftp/vsftpd.conf
@@ -24,6 +24,12 @@ listen_ipv6=NO
 # Permitir FTP anônimo do Vsftpd Server (desabilitado por padrão)
 anonymous_enable=NO
 #
+# Porta de origem das conexões de transferência de dados do FTP, porta padrão 20 (ftp-data).
+# OBSERVAÇÃO IMPORTANTE: suporte a porta de dados desativado, com isso a falha de conexão
+# ao FTP Server em Modo Passivo e resolvido, será utilizado o range de portas nas linhas
+# de configuração do Modo Passivo dos Clientes.
+connect_from_port_20=NO
+#
 # Configuração do suporte ao Modo Passivo dos Clientes do Vsftpd Server e Portas 
 # conexão remota para o envio e recebimentos de arquivos.
 pasv_enable=YES
@@ -50,9 +56,6 @@ dirmessage_enable=YES
 #
 # Exibir listas de diretórios com o tempo em seu fuso horário local no Vsftpd Server
 use_localtime=YES
-#
-# Porta de origem das conexões de transferência de dados do FTP, porta padrão 20 (ftp-data).
-connect_from_port_20=YES
 #
 # Habilitando o suporte do Syslog no Vsftp Server
 syslog_enable=YES
@@ -113,5 +116,4 @@ utf8_filesystem=YES
 # COM O SERVIDOR DE VSFTPd SERVER.
 # ascii_download_enable=YES
 # ascii_upload_enable=YES
-# connect_from_port_20=NO
 # nopriv_user=ftpuser
