--- a/scripts/conf/ftp/vsftpd.conf
+++ b/scripts/conf/ftp/vsftpd.conf
@@ -22,6 +22,11 @@ listen=YES
 listen_ipv6=NO
 #
 # Permitir FTP anônimo do Vsftpd Server (desabilitado por padrão)
+# OBSERVAÇÃO IMPORTANTE: mesmo desabilitando o usuário anonymous alguns navegadores não
+# entende o processo de autenticação, causando falha de acesso (Exemplo: Internet Explorer)
+# para resolver essa falha foi adicionado o usuário: anonymous no arquiuvo de liberação de
+# usuários em: /etc/vsftpd.allowed_users, nesse falha como o usuário anonymous está bloqueado
+# é apresentado a tela de autenticação.
 anonymous_enable=NO
 #
 # Porta de origem das conexões de transferência de dados do FTP, porta padrão 20 (ftp-data).
