--- a/scripts/conf/ftp/vsftpd.conf
+++ b/scripts/conf/ftp/vsftpd.conf
@@ -25,8 +25,8 @@ listen_ipv6=NO
 # OBSERVAÇÃO IMPORTANTE: mesmo desabilitando o usuário anonymous alguns navegadores não
 # entende o processo de autenticação, causando falha de acesso (Exemplo: Internet Explorer)
 # para resolver essa falha foi adicionado o usuário: anonymous no arquiuvo de liberação de
-# usuários em: /etc/vsftpd.allowed_users, nesse falha como o usuário anonymous está bloqueado
-# é apresentado a tela de autenticação.
+# usuários em: /etc/vsftpd.allowed_users, após adicionar o usuário no arquivo de liberação
+# a falha de autentincação e resolvida e será apresentada a tela de autenticação.
 anonymous_enable=NO
 #
 # Porta de origem das conexões de transferência de dados do FTP, porta padrão 20 (ftp-data).
