--- a/scripts/conf/wordpress/wordpress.conf
+++ b/scripts/conf/wordpress/wordpress.conf
@@ -6,11 +6,17 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 17/04/2022
-# Versão: 0.05
+# Data de atualização: 30/04/2022
+# Versão: 0.06
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x
 # Testado e homologado para a versão do Wordpress v5.8.x
+#
+# Configuração do Módulo de TLS/SSL do Apache2
+#<IfModule mod_ssl.c>
+	#
+	# Configuração do Virtual Host do Wordpress para suportar o TLS/SSL na porta 443
+	#<VirtualHost _default_:443>
 #
 #Configuração do Virtual Host do Wordpress no Apache2 na porta padrão 80
 <VirtualHost *:80>
@@ -36,20 +42,14 @@
 		allow from all
 	</Directory>
 	#
-	# Configuração dos módulos de segurança de acesso ao Wordpress
-	# Descomentar essas linhas depois de configurar o Wordpress
-	#<IfModule mod_rewrite.c>
-	#	RewriteEngine On
-	#	RewriteRule ^index\.php$ - [L]
-	#	RewriteCond $1 ^(index\.php)?$ [OR]
-	#	RewriteCond $1 \.(gif|jpg|png|ico|css|js)$ [NC,OR]
-	#	RewriteCond %{REQUEST_FILENAME} -f [OR]
-	#	RewriteCond %{REQUEST_FILENAME} -d
-	#	RewriteRule ^(.*)$ - [S=1]
-	#	RewriteRule . /index.php [L]
-	#</IfModule>
+	# Configuração do suporte ao TLS/SSL utilizando o certificado criado pelo OpenSSL
+	#SSLEngine on
+	#SSLCertificateFile /etc/ssl/newcerts/wordpress.crt
+	#SSLCertificateKeyFile /etc/ssl/private/wordpress.key
+	#SSLCertificateChainFile /etc/ssl/certs/pti-ca.pem
 	#
- 	# Configuração dos arquivos de Log do Wordpress
+ 	# Configuração dos arquivos de Log de Acesso e Erros do Wordpress
 	ErrorLog ${APACHE_LOG_DIR}/error-wordpress.log
 	CustomLog ${APACHE_LOG_DIR}/access-wordpress.log combined
 </VirtualHost>
+#</IfModule>
