--- a/scripts/conf/ftp/vsftpd.conf
+++ b/scripts/conf/ftp/vsftpd.conf
@@ -6,13 +6,14 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 18/10/2021
-# Data de atualização: 28/04/2022
-# Versão: 0.06
+# Data de atualização: 30/04/2022
+# Versão: 0.07
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Vsftpd Server v3.0.x
 #
-# Porta padrão do Vsftpd Server em modo Autônomo (comentar depois de configurar
-# a Porta 990 do suporte ao FTPS (seguro) utilizando o TLS/SSL)
+# Porta padrão 21 do Vsftpd Server em modo Autônomo (comentar a linha depois de configurar
+# a Porta 990 do suporte ao FTPS (seguro) utilizando o TLS/SSL - RECOMENDADO)
+#listen_port=990
 listen_port=21
 #
 # Habilitar o suporte ao IPv4 do Vsftpd Server
@@ -99,8 +100,7 @@ pam_service_name=vsftpd
 # Veja os procedimentos de criação de CA e Certificados nos scripts do OpenSSL: 
 # 12-A-openssl-ca.sh e 12-C-openssl-vsftdp.sh
 ssl_enable=NO
-debug_ssl=YES
-#listen_port=990
+#debug_ssl=YES
 #rsa_cert_file=/etc/ssl/newcerts/vsftpd.crt
 #rsa_private_key_file=/etc/ssl/private/vsftpd.key
 #implicit_ssl=YES
@@ -122,3 +122,4 @@ utf8_filesystem=YES
 # ascii_download_enable=YES
 # ascii_upload_enable=YES
 # nopriv_user=ftpuser
+# local_umask=077
