--- a/scripts/conf/ssl/tomcat9.conf
+++ b/scripts/conf/ssl/tomcat9.conf
@@ -5,12 +5,12 @@
 # YouTube: youtube.com/BoraParaPratica
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
-# Data de criação: 18/10/2021
-# Data de atualização: 17/04/2022
-# Versão: 0.03
+# Data de criação: 10/05/2022
+# Data de atualização: 10/05/2022
+# Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do OpenSSL v1.1.x
-# Testado e homologado para a versão do Apache2 v2.4.x
+# Testado e homologado para a versão do Tomcat v9.0.x
 #
 # Bloco de configuração do pedido de certificado PKCS#10 e comando de geração de certificado.
 [ req ]
@@ -78,7 +78,7 @@ emailAddress=optional
 # Bloco de configuração das requisições x509 da CA.
 # Esta seção define extensões x509 v3 a serem solicitadas em nossas solicitações.
 [ v3_req ]
-nsComment="Certificado Gerado pelo OpenSSL Apache2"
+nsComment="Certificado Gerado pelo OpenSSL Tomcat9"
 nsCertType=server
 subjectKeyIdentifier=hash
 extendedKeyUsage=serverAuth
@@ -86,8 +86,8 @@ basicConstraints=CA:FALSE
 keyUsage=digitalSignature,keyAgreement,keyEncipherment,dataEncipherment,nonRepudiation
 subjectAltName=@alternate_names
 #
-# Bloco de configuração dos nomes alternativos do certificado do Apache2
-# Adicionar todos os Nomes e Endereços IPv4 de acesso ao Servidor Apache2
+# Bloco de configuração dos nomes alternativos do certificado do Tomcat9
+# Adicionar todos os Nomes e Endereços IPv4 de acesso ao Servidor Tomcat9
 [ alternate_names ]
 IP.1=172.16.1.20
 DNS.1=ptispo01ws01.pti.intra
