--- a/scripts/conf/ssl/vsftpd.conf
+++ b/scripts/conf/ssl/vsftpd.conf
@@ -9,7 +9,8 @@
 # Data de atualização: 17/04/2022
 # Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do OpenSSL v1.1.x e VSFTPD v3.0.x
+# Testado e homologado para a versão do OpenSSL v1.1.x
+# Testado e homologado para a versão do VSFTPd v3.0.x
 #
 # Bloco de configuração do pedido de certificado PKCS#10 e comando de geração de certificado.
 [ req ]
