--- a/scripts/conf/lamp/mysql.cnf
+++ b/scripts/conf/lamp/mysql.cnf
@@ -6,13 +6,13 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 13/05/2022
-# Data de atualização: 13/05/2022
-# Versão: 0.01
+# Data de atualização: 18/05/2022
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do MySQL v8.0.x
 #
 # Configurações principais do Cliente de MySQL Server
 [mysql]
-ssl_ca=/etc/ssl/certs/pti-ca.pem
-ssl_cert=/etc/ssl/newcerts/mysql.crt
-ssl_key=/etc/ssl/private/mysql.key
+#ssl_ca=/etc/ssl/certs/pti-ca.pem
+#ssl_cert=/etc/ssl/newcerts/mysql.crt
+#ssl_key=/etc/ssl/private/mysql.key
