--- a/scripts/conf/ssl/mysql.conf
+++ b/scripts/conf/ssl/mysql.conf
@@ -78,7 +78,7 @@ emailAddress=optional
 # Bloco de configuração das requisições x509 da CA.
 # Esta seção define extensões x509 v3 a serem solicitadas em nossas solicitações.
 [ v3_req ]
-nsComment="Certificado Gerado pelo OpenSSL VSFTPd"
+nsComment="Certificado Gerado pelo OpenSSL MySQL"
 nsCertType=server
 subjectKeyIdentifier=hash
 extendedKeyUsage=serverAuth
