--- a/scripts/conf/webdav/webdav.conf
+++ b/scripts/conf/webdav/webdav.conf
@@ -11,8 +11,8 @@
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x
 
-# Configuração do caminho do banco de dados do Webdav
-DavLockDB /var/run/apache2/webdav/DavLock
+# Configuração do caminho da diretiva do DAVLockDB
+DavLockDB /var/www/davlockdb/DavLock
 
 # Habilitando o módulo de suporte ao Protocolo HTTPS utilizando TLS/SSL
 <IfModule mod_ssl.c>
