--- a/scripts/conf/loganalyzer/loganalyzer.conf
+++ b/scripts/conf/loganalyzer/loganalyzer.conf
@@ -6,14 +6,20 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 09/12/2021
-# Data de atualização: 09/12/2021
-# Versão: 0.01
+# Data de atualização: 30/05/2022
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x
 # Testado e homologado para a versão do LogAnalyzer v4.1.x
 #
-# Configuração do Virtual Host do LogAnalyzer no Apache2 na porta padrão 80
-<VirtualHost *:80>
+# Configuração do Módulo de TLS/SSL do Apache2
+<IfModule mod_ssl.c>
+	#
+	# Configuração do Virtual Host do Wordpress para suportar o TLS/SSL na porta 443
+	<VirtualHost _default_:443>
+#
+#Configuração do Virtual Host do Wordpress no Apache2 na porta padrão 80
+#<VirtualHost *:80>
 	#
 	# Configuração do email do administrador do LogAnalyzer
 	ServerAdmin admin@pti.intra
@@ -35,6 +41,12 @@
 		Order allow,deny
 		allow from all
 	</Directory>
+	#
+	# Configuração do suporte ao TLS/SSL utilizando o certificado criado pelo OpenSSL
+	SSLEngine on
+	SSLCertificateFile /etc/ssl/newcerts/apache2.crt
+	SSLCertificateKeyFile /etc/ssl/private/apache2.key
+	SSLCertificateChainFile /etc/ssl/certs/pti-ca.pem
 	#
  	# Configuração dos arquivos de Log do LogAnalyzer
 	ErrorLog ${APACHE_LOG_DIR}/error-loganalyzer.log
