--- a/scripts/conf/loganalyzer/loganalyzer.conf
+++ b/scripts/conf/loganalyzer/loganalyzer.conf
@@ -32,10 +32,10 @@
 	DirectoryIndex index.php index.html
 	#
 	# Diretório raiz da hospedagem do LogAnalyzer
-	DocumentRoot /var/www/html/log/
+	DocumentRoot /var/www/log/
 	#
 	# Configuração das permissões do diretório raiz do LogAnalyzer
-	<Directory /var/www/html/log>
+	<Directory /var/www/log>
 		Options FollowSymLinks
 		AllowOverride None
 		Order allow,deny
