--- a/scripts/conf/glpi/glpi10/glpi1.conf
+++ b/scripts/conf/glpi/glpi10/glpi1.conf
@@ -6,14 +6,20 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/12/2021
-# Data de atualização: 14/12/2021
-# Versão: 0.02
+# Data de atualização: 31/05/2022
+# Versão: 0.03
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x 
 # Testado e homologado para a versão do GLPI Help Desk v9.5.x
 #
+# Configuração do Módulo de TLS/SSL do Apache2
+<IfModule mod_ssl.c>
+	#
+	# Configuração do Virtual Host do GLPI Help Desk para suportar o TLS/SSL na porta 443
+	<VirtualHost _default_:443>
+#
 #Configuração do Virtual Host do GLPI Help Desk no Apache2 na porta padrão 80
-<VirtualHost *:80>
+#<VirtualHost *:80>
 	#
 	# Configuração do email do administrador do GLPI Help Desk
 	ServerAdmin admin@pti.intra
@@ -26,10 +32,10 @@
 	DirectoryIndex index.php index.html
 	#
 	# Diretório raiz da hospedagem do GLPI Help Desk
-	DocumentRoot /var/www/html/glpi/
+	DocumentRoot /var/www/glpi9/
 	#
 	# Configuração das permissões do diretório raiz do GLPI Help Desk
-	<Directory /var/www/html/glpi>
+	<Directory /var/www/glpi9>
 		Options FollowSymLinks
 		AllowOverride All
 		Order allow,deny
@@ -48,6 +54,12 @@
 	#	RewriteRule ^(.*)$ - [S=1]
 	#	RewriteRule . /index.php [L]
 	#</IfModule>
+	#
+	# Configuração do suporte ao TLS/SSL utilizando o certificado criado pelo OpenSSL
+	SSLEngine on
+	SSLCertificateFile /etc/ssl/newcerts/apache2.crt
+	SSLCertificateKeyFile /etc/ssl/private/apache2.key
+	SSLCertificateChainFile /etc/ssl/certs/pti-ca.pem
 	#
  	# Configuração dos arquivos de Log do GLPI Help Desk
 	ErrorLog ${APACHE_LOG_DIR}/error-glpi.log
