--- a/scripts/conf/loganalyzer/loganalyzer.conf
+++ b/scripts/conf/loganalyzer/loganalyzer.conf
@@ -15,10 +15,10 @@
 # Configuração do Módulo de TLS/SSL do Apache2
 <IfModule mod_ssl.c>
 	#
-	# Configuração do Virtual Host do Wordpress para suportar o TLS/SSL na porta 443
+	# Configuração do Virtual Host do LogAnalyzer para suportar o TLS/SSL na porta 443
 	<VirtualHost _default_:443>
 #
-#Configuração do Virtual Host do Wordpress no Apache2 na porta padrão 80
+#Configuração do Virtual Host do LogAnalyzer no Apache2 na porta padrão 80
 #<VirtualHost *:80>
 	#
 	# Configuração do email do administrador do LogAnalyzer
