--- a/scripts/conf/glpi/glpi9/glpi1.conf
+++ b/scripts/conf/glpi/glpi9/glpi1.conf
@@ -25,7 +25,7 @@
 	ServerAdmin admin@pti.intra
 	#
 	# Configuração do Virtual Host que irá responder pelas requisições do GLPI Help Desk
-	ServerName  glpi.pti.intra
+	ServerName  glpi9.pti.intra
 	ServerAlias helpdesk.pti.intra
 	#
 	# Configuração do suporte aos arquivo index.php, index.html do GLPI Help Desk
