--- a/scripts/conf/fusioninventory/agent.cfg
+++ b/scripts/conf/fusioninventory/agent.cfg
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 25/11/2021
-# Data de atualização: 02/12/2021
-# Versão: 0.03
+# Data de atualização: 05/06/2022
+# Versão: 0.04
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do FusionInventory Server v9.5.x
 # Testado e homologado para a versão do FusionInventory Agent v2.6.x
@@ -17,7 +17,7 @@
 # OBSERVAÇÃO IMPORTANTE: no servidor Ubuntu Server utilizar o endereço
 # de Loopback (localhost), no agentes remotos mudar para o endereço de
 # rede: 172.16.1.20 ou CNAME: glpi.pti.intra
-server = http://localhost/glpi/plugins/fusioninventory/
+server = https://glpi.pti.intra/plugins/fusioninventory/
 #
 # Diretório temporário utilizado pelo FusionInventory para o inventário
 local = /tmp
@@ -83,7 +83,7 @@ logfacility = LOG_USER
 color = 1
 #
 # Adicionar a TAG para o resultado do inventário no FusionInventory
-tag = Server
+tag = ServerLinux
 #
 # Modo de Debug
 debug = 0
