--- a/scripts/conf/lamp/php.ini
+++ b/scripts/conf/lamp/php.ini
@@ -6,8 +6,8 @@
 ; Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 ; Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 ; Data de criação: 15/10/2021
-; Data de atualização: 20/02/2022
-; Versão: 0.04
+; Data de atualização: 05/06/2022
+; Versão: 0.05
 ; Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 ; Testado e homologado para a versão do PHP v7.4.x
 ;
@@ -21,6 +21,7 @@
 ;
 ; Opções alteradas do ZoneMinder
 ;	date.timezone = America/Sao_Paulo
+;	zlib.output_compression = Off
 ;
 ; Opções alteradas do Wordpress
 ;	zlib.output_compression = On
@@ -67,7 +68,8 @@ output_buffering = 4096
 ; URL rewriter will not rewrite absolute URL nor form by default.
 ;url_rewriter.hosts
 ;
-; Configuração utilizada pelo Wordpress (padrão Off mudado para On junto com as Bibliotecas) 
+; Configuração utilizada pelo Wordpress (padrão Off mudado para On junto com as Bibliotecas)
+; Configuração utilizada pelo ZoneMinder (padrão Off, deixar o padrão, cuidado em relação ao Wordpress)
 zlib.output_compression = On
 ;zlib.output_compression_level = -1
 ;
