--- a/scripts/conf/glpi/glpi10/glpi1.conf
+++ b/scripts/conf/glpi/glpi10/glpi1.conf
@@ -6,11 +6,11 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/12/2021
-# Data de atualização: 31/05/2022
-# Versão: 0.03
+# Data de atualização: 09/07/2022
+# Versão: 0.04
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x 
-# Testado e homologado para a versão do GLPI Help Desk v9.5.x
+# Testado e homologado para a versão do GLPI Help Desk v10.0.x
 #
 # Configuração do Módulo de TLS/SSL do Apache2
 <IfModule mod_ssl.c>
@@ -25,17 +25,17 @@
 	ServerAdmin admin@pti.intra
 	#
 	# Configuração do Virtual Host que irá responder pelas requisições do GLPI Help Desk
-	ServerName  glpi.pti.intra
+	ServerName  glpi10.pti.intra
 	ServerAlias helpdesk.pti.intra
 	#
 	# Configuração do suporte aos arquivo index.php, index.html do GLPI Help Desk
 	DirectoryIndex index.php index.html
 	#
 	# Diretório raiz da hospedagem do GLPI Help Desk
-	DocumentRoot /var/www/glpi9/
+	DocumentRoot /var/www/glpi10/
 	#
 	# Configuração das permissões do diretório raiz do GLPI Help Desk
-	<Directory /var/www/glpi9>
+	<Directory /var/www/glpi10>
 		Options FollowSymLinks
 		AllowOverride All
 		Order allow,deny
@@ -62,6 +62,6 @@
 	SSLCertificateChainFile /etc/ssl/certs/pti-ca.pem
 	#
  	# Configuração dos arquivos de Log do GLPI Help Desk
-	ErrorLog ${APACHE_LOG_DIR}/error-glpi.log
-	CustomLog ${APACHE_LOG_DIR}/access-glpi.log combined	
+	ErrorLog ${APACHE_LOG_DIR}/error-glpi10.log
+	CustomLog ${APACHE_LOG_DIR}/access-glpi10.log combined	
 </VirtualHost>
