--- a/scripts/conf/glpi/glpi9/glpi1.conf
+++ b/scripts/conf/glpi/glpi9/glpi1.conf
@@ -62,6 +62,6 @@
 	SSLCertificateChainFile /etc/ssl/certs/pti-ca.pem
 	#
  	# Configuração dos arquivos de Log do GLPI Help Desk
-	ErrorLog ${APACHE_LOG_DIR}/error-glpi.log
-	CustomLog ${APACHE_LOG_DIR}/access-glpi.log combined	
+	ErrorLog ${APACHE_LOG_DIR}/error-glpi9.log
+	CustomLog ${APACHE_LOG_DIR}/access-glpi9.log combined	
 </VirtualHost>
