--- a/scripts/conf/glpi/glpi10/glpi.conf
+++ b/scripts/conf/glpi/glpi10/glpi.conf
@@ -6,23 +6,23 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 31/05/2016
-# Data de atualização: 30/11/2021
-# Versão: 0.13
+# Data de atualização: 09/07/2022
+# Versão: 0.14
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 # Testado e homologado para a versão do Apache2 v2.4.x 
-# Testado e homologado para a versão do GLPI Help Desk v9.5.x
+# Testado e homologado para a versão do GLPI Help Desk v10.0.x
 #
 # Configuração da permissão do diretório raiz do GLPI Help Desk no Apache2
-<Directory /var/www/html/glpi>
+<Directory /var/www/glpi10>
 	AllowOverride All
 </Directory>
 #
 # Configuração das opções do diretório de config do GLPI Help Desk
-<Directory /var/www/html/glpi/config>
+<Directory /var/www/glpi10/config>
 	Options -Indexes
 </Directory>
 #
 # Configuração das opções do diretório de files do GLPI Help Desk
-<Directory /var/www/html/glpi/files> 
+<Directory /var/www/glpi10/files> 
 	Options -Indexes
 </Directory>
