--- a/scripts/conf/ntp/ntp.conf
+++ b/scripts/conf/ntp/ntp.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 30/03/2022
-# Versão: 0.05
+# Data de atualização: 10/07/2022
+# Versão: 0.06
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 # Testado e homologado para a versão do NTP Server v4.2.
 #
@@ -39,7 +39,12 @@ interface listen enp0s3
 #
 # Servidores públicos do projeto ntp.br com suporte ao IPv4 e IPv6
 # server a.st1.ntp.br iburst maxpoll 9 prefer
+# OBSERVAÇÃO IMPORTANTE: utilizar os Endereços IPv4 resolve os problemas
+# de falha de resolução de nomes do Bind9 DNS devido a segurança existente
+# no sincronismo de data/hora do cache do Bind.
+server 200.160.7.186 iburst
 server a.st1.ntp.br iburst
+server 201.49.148.135 iburst
 server b.st1.ntp.br iburst
 server c.st1.ntp.br iburst
 server d.st1.ntp.br iburst
