--- a/scripts/conf/guacamole/guacamole.properties
+++ b/scripts/conf/guacamole/guacamole.properties
@@ -6,10 +6,10 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 03/12/2021
-# Data de atualização: 09/12/2021
-# Versão: 0.3
+# Data de atualização: 12/07/2022
+# Versão: 0.04
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do Apache Guacamole Server 1.3.x e Cliente 1.3.x
+# Testado e homologado para a versão do Apache Guacamole Server 1.4.x e Cliente 1.4.x
 
 # Configuração do Hostname do Guacamole Server
 guacd-hostname: localhost
@@ -17,8 +17,16 @@ guacd-hostname: localhost
 # Configuração da Porta de Acesso ao Guacamole Server
 guacd-port: 4822
 #
-# Configuração do Protocolo de Autenticação Básica do Guacamole Server
-auth-provider: net.sourceforge.guacamole.net.basic.BasicFileAuthenticationProvider
+# Configuração do Protocolo de Autenticação Básica do Guacamole Server, utilizando o
+# arquivo de mapeamento de usuários: user-mapping.xml
+#auth-provider: net.sourceforge.guacamole.net.basic.BasicFileAuthenticationProvider
 #
-# Localização do arquivo de Configuração do Usuário e Acesso Remoto do Guacamole Server
-user-mapping: /etc/guacamole/user-mapping.xml
+# Localização do arquivo de Mapeamento dos Usuários de Acesso Remoto do Guacamole Server
+#user-mapping: /etc/guacamole/user-mapping.xml
+#
+# Configuração do Conector JDBC do MySQL Server utilizado pelo Guacamole Server
+mysql-hostname: localhost
+mysql-port: 3306
+mysql-database: guacamole
+mysql-username: guacamole
+mysql-password: guacamole
