--- a/scripts/conf/lamp/php.ini
+++ b/scripts/conf/lamp/php.ini
@@ -6,8 +6,8 @@
 ; Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 ; Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 ; Data de criação: 15/10/2021
-; Data de atualização: 05/06/2022
-; Versão: 0.05
+; Data de atualização: 21/07/2022
+; Versão: 0.06
 ; Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 ; Testado e homologado para a versão do PHP v7.4.x
 ;
@@ -25,6 +25,11 @@
 ;
 ; Opções alteradas do Wordpress
 ;	zlib.output_compression = On
+;	upload_max_filesize 128M
+;	post_max_size 128M
+;	max_execution_time 300
+;	max_input_time 300
+;	memory_limit 256M
 ;
 ; Opções alteradas do GLPI
 ;	max_execution_time = 600
@@ -140,11 +145,12 @@ zend.exception_ignore_args = On
 ; (e.g. by adding its signature to the Web server header).
 expose_php = Off
 
-; Configurações utilizadas pelo GLPI Help Desk
+; Configurações utilizadas pelo GLPI Help Desk e Wordpress
 max_execution_time = 600
 
 ; Maximum amount of time each script may spend parsing request data.
-max_input_time = 60
+; Configurações utilizadas pelo Wordpress
+max_input_time = 300
 
 ; Maximum input variable nesting level
 ;max_input_nesting_level = 64
@@ -153,7 +159,7 @@ max_input_time = 60
 ;max_input_vars = 1000
 
 ; Maximum amount of memory a script may consume (128MB)
-; Utilizado pelo ownCloud opção >=256M
+; Configurações utilizadas pelo ownCloud e Wordpress opção >=256M
 memory_limit = 256M
 
 ; This directive informs PHP of which errors, warnings and notices you would like
@@ -260,7 +266,8 @@ auto_globals_jit = On
 ;enable_post_data_reading = Off
 
 ; Maximum size of POST data that PHP will accept.
-post_max_size = 8M
+; Configurações utilizadas pelo Wordpress >= 128M
+post_max_size = 128M
 
 ; Automatically add files before PHP document.
 auto_prepend_file =
@@ -350,7 +357,7 @@ file_uploads = On
 ;upload_tmp_dir =
 
 ; Maximum allowed size for uploaded files.
-; Utilizado pelo ownCloud opção >= 100M
+; Configurações utilizadas pelo ownCloud e Wordpress opção >= 100M
 upload_max_filesize = 250M
 
 ; Maximum number of files that can be uploaded via a single request
