--- a/scripts/conf/netdata/netdata-ssl.conf
+++ b/scripts/conf/netdata/netdata-ssl.conf
@@ -20,7 +20,8 @@
 		# Configuração do Nome de Domínio e dos Apelidos do Apache2
 		ServerName netdata.pti.intra
 		#
-		# Configuração do Proxy Reverso do Netdata
+		# Configuração do Proxy Reverso do Netdata utilizando o Apache2
+		# Habilitar os módulos do Apache2: a2enmod proxy proxy_http proxy_balancer libmethod_byrequests
 		ProxyPreserveHost On
 		ProxyPass / http://pti.intra:19999/
 		ProxyPassReverse / http://pti.intra:19999/
