--- a/scripts/conf/netdata/netdata-ssl.conf
+++ b/scripts/conf/netdata/netdata-ssl.conf
@@ -22,6 +22,9 @@
 		#
 		# Configuração do Proxy Reverso do Netdata utilizando o Apache2
 		# Habilitar os módulos do Apache2: a2enmod proxy proxy_http proxy_balancer libmethod_byrequests
+		# Alterar o arquivo de configuração: netdata.conf nas linhas referente a permissão de acesso:
+		# allow connections from = localhost netdata.pti.intra 172.16.1.20
+		# allow dashboard from = localhost netdata.pti.intra 172.16.1.20
 		ProxyPreserveHost On
 		ProxyPass / http://pti.intra:19999/
 		ProxyPassReverse / http://pti.intra:19999/
