--- a/scripts/conf/netdata/netdata.conf
+++ b/scripts/conf/netdata/netdata.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 28/07/2022
-# Data de atualização: 28/07/2022
-# Versão: 0.01
+# Data de atualização: 31/07/2022
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Netdata v1.32.x
 #
@@ -132,9 +132,9 @@
 	# accept a streaming request every seconds = 0
 	# respect do not track policy = no
 	# x-frame-options response header = 
-	# allow connections from = localhost *
+	# allow connections from = localhost netdata.pti.intra 172.16.1.20
 	# allow connections by dns = heuristic
-	# allow dashboard from = localhost *
+	# allow dashboard from = localhost netdata.pti.intra 172.16.1.20
 	# allow dashboard by dns = heuristic
 	# allow badges from = *
 	# allow badges by dns = heuristic
