--- a/scripts/conf/netdata/netdata-ssl.conf
+++ b/scripts/conf/netdata/netdata-ssl.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 31/07/2022
-# Data de atualização: 31/07/2022
-# Versão: 0.01
+# Data de atualização: 04/08/2022
+# Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x, OpenSSL v1.1.x e Netdata 1.35.x
 #
@@ -22,7 +22,7 @@
 		#
 		# Configuração do Proxy Reverso do Netdata utilizando o Apache2
 		# Habilitar os módulos do Apache2: a2enmod proxy proxy_http proxy_balancer libmethod_byrequests
-		# Alterar o arquivo de configuração: netdata.conf nas linhas referente a permissão de acesso:
+		# Alterar o arquivo de configuração: /etc/netdata/netdata.conf nas linhas referente a permissão de acesso:
 		# allow connections from = localhost netdata.pti.intra 172.16.1.20
 		# allow dashboard from = localhost netdata.pti.intra 172.16.1.20
 		ProxyPreserveHost On
