--- a/scripts/conf/netdata/netdata-ssl.conf
+++ b/scripts/conf/netdata/netdata-ssl.conf
@@ -21,7 +21,7 @@
 		ServerName netdata.pti.intra
 		#
 		# Configuração do Proxy Reverso do Netdata utilizando o Apache2
-		# Habilitar os módulos do Apache2: a2enmod proxy proxy_http proxy_balancer libmethod_byrequests
+		# Habilitar os módulos do Apache2: a2enmod proxy proxy_http proxy_balancer lbmethod_byrequests
 		# Alterar o arquivo de configuração: /etc/netdata/netdata.conf nas linhas referente a permissão de acesso:
 		# allow connections from = localhost netdata.pti.intra 172.16.1.20
 		# allow dashboard from = localhost netdata.pti.intra 172.16.1.20
