--- a/scripts/conf/ansible/rundeck-config.properties
+++ b/scripts/conf/ansible/rundeck-config.properties
@@ -9,7 +9,7 @@
 # Data de atualização: 12/01/2022
 # Versão: 0.02
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do Ansible 2.9.x e do Rundeck 3.4.x
+# Testado e homologado para a versão do Ansible v2.10.x e do Rundeck v4.4.x
 #
 # Configuração do endereço IPv4 e Porta de Conexão do Servidor Ubuntu que está 
 # rodando o Rundeck, por padrão as configurações do Rundeck só responde para o 
