--- a/scripts/conf/fusioninventory/agent.cfg
+++ b/scripts/conf/fusioninventory/agent.cfg
@@ -55,7 +55,7 @@ ca-cert-file =
 # Não verifique o certificado SSL do servidor de FusionInventory
 no-ssl-check = 0
 #
-# Tempo máximo de conenxão com o servidor de FusionInventory
+# Tempo máximo de conexão com o servidor de FusionInventory
 timeout = 180
 #
 # Desativar o servidor web incorporado do Agent do FusionInventory
