--- a/scripts/conf/graylog/server.conf
+++ b/scripts/conf/graylog/server.conf
@@ -32,7 +32,7 @@ password_secret =
 # Configuração do Timezone UTC do Graylog, deve ser igual ao configurado no Locale do Servidor
 root_timezone = America/Sao_Paulo
 
-# Configuração padrão do Graylog, não recomendo alterar os valores a menos que você saiba o que está
+# Configuração padrão do Graylog, não é recomendo alterar os valores a menos que você saiba o que está
 # fazendo e leu a documentação. Informações detalhadas no arquivo de backup: server.conf.bkp
 is_master = true
 node_id_file = /etc/graylog/server/node-id
