--- a/scripts/conf/netdisco/deployment.yml
+++ b/scripts/conf/netdisco/deployment.yml
@@ -12,7 +12,7 @@
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Netdisco v2.x
 #
-# Link do material detalhada das configurações do Netdisco
+# Link do material detalhado das configurações do Netdisco
 # https://github.com/netdisco/netdisco/wiki/Configuration
 #
 # Configurações da Base de Dados do PostgreSQL do Netdisco
