--- a/scripts/conf/owncloud/owncloud.conf
+++ b/scripts/conf/owncloud/owncloud.conf
@@ -16,7 +16,7 @@
 #Configuração do Virtual Host do ownCloud no Apache2 na porta padrão 80
 <VirtualHost *:80>
 	#
-	# Configuração do email do administrador do GLPI Help Desk
+	# Configuração do email do administrador do ownCloud
 	ServerAdmin admin@pti.intra
 	#
 	# Configuração do Virtual Host que irá responder pelas requisições do ownCloud
