--- a/scripts/conf/zabbix/apache.conf
+++ b/scripts/conf/zabbix/apache.conf
@@ -9,7 +9,7 @@
 # Data de atualização: 11/12/2021
 # Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do Zabbix Server e Agent v5.4.x 
+# Testado e homologado para a versão do Zabbix Server v6.x e Agent v6.x 
 
 # Configuração do Apache2 para suportar as configurações do Zabbix
 # Arquivo não sofreu alteração, manteve a mesma da instalação.
