--- a/scripts/conf/zabbix/zabbix_agentd.conf
+++ b/scripts/conf/zabbix/zabbix_agentd.conf
@@ -9,10 +9,11 @@
 # Data de atualização: 11/12/2021
 # Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do Zabbix Server e Agent v5.4.x 
+# Testado e homologado para a versão do Zabbix Server v6.x e Agent v6.x 
 
-# Configuração padrão do Zabbix Agent, configurações avançadas eu recomendo você ler os
-# manuais de configuração e customização do Zabbix Agent no site Oficial.
+# Configuração padrão do Zabbix Agent, configurações avançadas eu recomendo 
+# você ler os manuais de configuração e customização do Zabbix Agent no site 
+# Oficial.
 #
 # Variável do nome do Servidor do Zabbix
 Hostname=ptispo01ws01
