--- a/scripts/conf/netdisco/netdisco-web.service
+++ b/scripts/conf/netdisco/netdisco-web.service
@@ -1,3 +1,16 @@
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 09/09/2022
+# Data de atualização: 09/09/2022
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
+# Testado e homologado para a versão do Netdisco v2.x
+
 [Unit]
 Description=Netdisco Web Service
 AssertFileIsExecutable=/home/netdisco/bin/netdisco-web
