--- a/scripts/conf/glpi/glpi10/glpi1.conf
+++ b/scripts/conf/glpi/glpi10/glpi1.conf
@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/12/2021
-# Data de atualização: 09/07/2022
-# Versão: 0.04
+# Data de atualização: 21/08/2022
+# Versão: 0.05
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Apache2 v2.4.x 
 # Testado e homologado para a versão do GLPI Help Desk v10.0.x
@@ -17,51 +17,54 @@
 	#
 	# Configuração do Virtual Host do GLPI Help Desk para suportar o TLS/SSL na porta 443
 	<VirtualHost _default_:443>
-#
-#Configuração do Virtual Host do GLPI Help Desk no Apache2 na porta padrão 80
-#<VirtualHost *:80>
 	#
-	# Configuração do email do administrador do GLPI Help Desk
-	ServerAdmin admin@pti.intra
-	#
-	# Configuração do Virtual Host que irá responder pelas requisições do GLPI Help Desk
-	ServerName  glpi10.pti.intra
-	ServerAlias helpdesk.pti.intra
-	#
-	# Configuração do suporte aos arquivo index.php, index.html do GLPI Help Desk
-	DirectoryIndex index.php index.html
-	#
-	# Diretório raiz da hospedagem do GLPI Help Desk
-	DocumentRoot /var/www/glpi10/
-	#
-	# Configuração das permissões do diretório raiz do GLPI Help Desk
-	<Directory /var/www/glpi10>
-		Options FollowSymLinks
-		AllowOverride All
-		Order allow,deny
-		allow from all
-	</Directory>
-	#
-	# Configuração dos módulos de segurança de acesso ao GLPI Help Desk
-	# Descomentar essas linhas depois de configurar o GLPI Help Desk
-	#<IfModule mod_rewrite.c>
-	#	RewriteEngine On
-	#	RewriteRule ^index\.php$ - [L]
-	#	RewriteCond $1 ^(index\.php)?$ [OR]
-	#	RewriteCond $1 \.(gif|jpg|png|ico|css|js)$ [NC,OR]
-	#	RewriteCond %{REQUEST_FILENAME} -f [OR]
-	#	RewriteCond %{REQUEST_FILENAME} -d
-	#	RewriteRule ^(.*)$ - [S=1]
-	#	RewriteRule . /index.php [L]
-	#</IfModule>
-	#
-	# Configuração do suporte ao TLS/SSL utilizando o certificado criado pelo OpenSSL
-	SSLEngine on
-	SSLCertificateFile /etc/ssl/newcerts/apache2.crt
-	SSLCertificateKeyFile /etc/ssl/private/apache2.key
-	SSLCertificateChainFile /etc/ssl/certs/pti-ca.pem
-	#
- 	# Configuração dos arquivos de Log do GLPI Help Desk
-	ErrorLog ${APACHE_LOG_DIR}/error-glpi10.log
-	CustomLog ${APACHE_LOG_DIR}/access-glpi10.log combined	
-</VirtualHost>
+	#Configuração do Virtual Host do GLPI Help Desk no Apache2 na porta padrão 80
+	#<VirtualHost *:80>
+		#
+		# Configuração do email do administrador do GLPI Help Desk
+		ServerAdmin admin@pti.intra
+		#
+		# Configuração do Virtual Host que irá responder pelas requisições do GLPI Help Desk
+		ServerName  glpi10.pti.intra
+		ServerAlias helpdesk.pti.intra
+		#
+		# Configuração do suporte aos arquivo index.php, index.html do GLPI Help Desk
+		DirectoryIndex index.php index.html
+		#
+		# Diretório raiz da hospedagem do GLPI Help Desk
+		DocumentRoot /var/www/glpi10/
+		#
+		# Configuração das permissões do diretório raiz do GLPI Help Desk
+		<Directory /var/www/glpi10>
+			Options FollowSymLinks
+			AllowOverride All
+			Order allow,deny
+			allow from all
+		</Directory>
+		#
+		# Configuração dos módulos de segurança de acesso ao GLPI Help Desk
+		# Descomentar essas linhas depois de configurar o GLPI Help Desk
+		#<IfModule mod_rewrite.c>
+		#	RewriteEngine On
+		#	RewriteRule ^index\.php$ - [L]
+		#	RewriteCond $1 ^(index\.php)?$ [OR]
+		#	RewriteCond $1 \.(gif|jpg|png|ico|css|js)$ [NC,OR]
+		#	RewriteCond %{REQUEST_FILENAME} -f [OR]
+		#	RewriteCond %{REQUEST_FILENAME} -d
+		#	RewriteRule ^(.*)$ - [S=1]
+		#	RewriteRule . /index.php [L]
+		#</IfModule>
+		#
+		# Configuração do suporte ao TLS/SSL utilizando o certificado criado pelo OpenSSL
+		SSLEngine on
+		SSLCertificateFile /etc/ssl/newcerts/apache2.crt
+		SSLCertificateKeyFile /etc/ssl/private/apache2.key
+		SSLCertificateChainFile /etc/ssl/certs/pti-ca.pem
+		#
+		# Configuração dos arquivos de Log do GLPI Help Desk
+		ErrorLog ${APACHE_LOG_DIR}/error-glpi10.log
+		CustomLog ${APACHE_LOG_DIR}/access-glpi10.log combined	
+	</VirtualHost>
+</IfModule>
+
+# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
