--- a/scripts/conf/fusioninventory/agent.cfg
+++ b/scripts/conf/fusioninventory/agent.cfg
@@ -17,7 +17,7 @@
 # OBSERVAÇÃO IMPORTANTE: no servidor Ubuntu Server utilizar o endereço
 # de Loopback (localhost), no agentes remotos mudar para o endereço de
 # rede: 172.16.1.20 ou CNAME: glpi.pti.intra
-server = https://glpi.pti.intra/plugins/fusioninventory/
+server = https://glpi9.pti.intra/plugins/fusioninventory/
 #
 # Diretório temporário utilizado pelo FusionInventory para o inventário
 local = /tmp
