--- a/scripts/conf/lamp/php.ini
+++ b/scripts/conf/lamp/php.ini
@@ -6,8 +6,8 @@
 ; Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 ; Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 ; Data de criação: 15/10/2021
-; Data de atualização: 21/07/2022
-; Versão: 0.06
+; Data de atualização: 19/09/2022
+; Versão: 0.07
 ; Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 ; Testado e homologado para a versão do PHP v7.4.x
 ;
@@ -35,6 +35,8 @@
 ;	max_execution_time = 600
 ;	session.auto_start = Off
 ;	session.use_trans_sid = 0
+;	session.cookie_secure = on
+;	session.cookie_httponly = on
 ;
 ; Bloco de configuração padrão do PHP 7.4.x
 [PHP]
@@ -647,7 +649,9 @@ session.use_strict_mode = 0
 
 ; Whether to use cookies.
 session.use_cookies = 1
-;session.cookie_secure =
+
+; Configurações utilizadas pelo GLPI Help Desk
+session.cookie_secure = on
 
 ; This option forces PHP to fetch and use a cookie for storing and maintaining
 ; the session id.
@@ -672,7 +676,8 @@ session.cookie_domain =
 
 ; Whether or not to add the httpOnly flag to the cookie, which makes it
 ; inaccessible to browser scripting languages such as JavaScript.
-session.cookie_httponly =
+; Configurações utilizadas pelo GLPI Help Desk
+session.cookie_httponly = on
 
 ; Add SameSite attribute to cookie to help mitigate Cross-Site Request Forgery (CSRF/XSRF)
 session.cookie_samesite =
