--- a/scripts/conf/fusioninventory/agent.cfg
+++ b/scripts/conf/fusioninventory/agent.cfg
@@ -67,7 +67,7 @@ httpd-ip =
 # Configuração da Porta de comunicação do FusionInventory no GLPI
 httpd-port = 62354
 #
-# Configuração da sada de erro
+# Configuração da saída de erro
 logger = stderr
 #
 # Arquivo de Log do inventário do Agent do FusionInventory
