--- a/scripts/conf/lamp/php.ini
+++ b/scripts/conf/lamp/php.ini
@@ -6,12 +6,12 @@
 ; Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 ; Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 ; Data de criação: 15/10/2021
-; Data de atualização: 19/09/2022
-; Versão: 0.07
+; Data de atualização: 25/09/2022
+; Versão: 0.08
 ; Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 ; Testado e homologado para a versão do PHP v7.4.x
 ;
-; Configurações customizadas para os serviços do: ownCloud, ZoneMinder, Wordpress, GLPI
+; Configurações customizadas para os serviços do: ownCloud, ZoneMinder, Wordpress, GLPI v9.x e v10.x
 ; 
 ; Opções alteradas do ownCloud
 ;	memory_limit = 256M
@@ -31,7 +31,7 @@
 ;	max_input_time 300
 ;	memory_limit 256M
 ;
-; Opções alteradas do GLPI
+; Opções alteradas do GLPI Help Desk v9.x e v10.x
 ;	max_execution_time = 600
 ;	session.auto_start = Off
 ;	session.use_trans_sid = 0
@@ -75,8 +75,8 @@ output_buffering = 4096
 ; URL rewriter will not rewrite absolute URL nor form by default.
 ;url_rewriter.hosts
 ;
-; Configuração utilizada pelo Wordpress (padrão Off mudado para On junto com as Bibliotecas)
-; Configuração utilizada pelo ZoneMinder (padrão Off, deixar o padrão, cuidado em relação ao Wordpress)
+; Configuração utilizada pelo Wordpress (padrão Off, mudaro para On junto com as Bibliotecas)
+; Configuração utilizada pelo ZoneMinder (padrão Off, deixar o padrão, muito cuidado em relação ao Wordpress)
 zlib.output_compression = On
 ;zlib.output_compression_level = -1
 ;
