--- a/scripts/conf/netdata/wmi.conf
+++ b/scripts/conf/netdata/wmi.conf
@@ -1,142 +1,19 @@
-# netdata go.d.plugin configuration for wmi
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 04/10/2022
+# Data de atualização: 04/10/2022
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Netdata v1.32.x
 #
-# This file is in YAML format. Generally the format is:
+# Configuração do Job de monitoramento do Prometheus Windows Exporter
 #
-# name: value
-#
-# There are 2 sections:
-#  - GLOBAL
-#  - JOBS
-#
-#
-# [ GLOBAL ]
-# These variables set the defaults for all JOBs, however each JOB may define its own, overriding the defaults.
-#
-# The GLOBAL section format:
-# param1: value1
-# param2: value2
-#
-# Currently supported global parameters:
-#  - update_every
-#    Data collection frequency in seconds. Default: 1.
-#
-#  - autodetection_retry
-#    Re-check interval in seconds. Attempts to start the job are made once every interval.
-#    Zero means not to schedule re-check. Default: 0.
-#
-#  - priority
-#    Priority is the relative priority of the charts as rendered on the web page,
-#    lower numbers make the charts appear before the ones with higher numbers. Default: 70000.
-#
-#
-# [ JOBS ]
-# JOBS allow you to collect values from multiple sources.
-# Each source will have its own set of charts.
-#
-# IMPORTANT:
-#  - Parameter 'name' is mandatory.
-#  - Jobs with the same name are mutually exclusive. Only one of them will be allowed running at any time.
-#
-# This allows autodetection to try several alternatives and pick the one that works.
-# Any number of jobs is supported.
-#
-# The JOBS section format:
-#
-# jobs:
-#   - name: job1
-#     param1: value1
-#     param2: value2
-#
-#   - name: job2
-#     param1: value1
-#     param2: value2
-#
-#   - name: job2
-#     param1: value1
-#
-#
-# [ List of JOB specific parameters ]:
-#  - url
-#    Server URL.
-#    Syntax:
-#      url: http://127.0.0.1:9182
-#
-#  - username
-#    Username for basic HTTP authentication.
-#    Syntax:
-#      username: tony
-#
-#  - password
-#    Password for basic HTTP authentication.
-#    Syntax:
-#      password: stark
-#
-#  - proxy_url
-#    Proxy URL.
-#    Syntax:
-#      proxy_url: http://localhost:3128
-#
-#  - proxy_username
-#    Username for proxy basic HTTP authentication.
-#    Syntax:
-#      username: bruce
-#
-#  - proxy_password
-#    Password for proxy basic HTTP authentication.
-#    Syntax:
-#      username: wayne
-#
-#  - timeout
-#    HTTP response timeout.
-#    Syntax:
-#      timeout: 1
-#
-#  - not_follow_redirects
-#    Whether to not follow redirects from the server.
-#    Syntax:
-#      not_follow_redirects: yes/no
-#
-#  - tls_skip_verify
-#    Whether to skip verifying server's certificate chain and hostname.
-#    Syntax:
-#      tls_skip_verify: yes/no
-#
-#  - tls_ca
-#    Certificate authority that client use when verifying server certificates.
-#    Syntax:
-#      tls_ca: path/to/ca.pem
-#
-#  - tls_cert
-#    Client tls certificate.
-#    Syntax:
-#      tls_cert: path/to/cert.pem
-#
-#  - tls_key
-#    Client tls key.
-#    Syntax:
-#      tls_key: path/to/key.pem
-#
-#
-# [ JOB defaults ]:
-#  timeout: 2
-#  not_follow_redirects: no
-#  tls_skip_verify: no
-#
-#
-# [ JOB mandatory parameters ]:
-#  - name
-#  - url
-#
-# ------------------------------------------------MODULE-CONFIGURATION--------------------------------------------------
-
-# update_every: 5
-# autodetection_retry: 0
-# priority: 70000
-#
-
-#jobs:
-#  - name: win_server1
-#    url: http://10.0.0.1:9182/metrics
-#
-#  - name: win_server2
-#    url: http://10.0.0.2:9182/metrics
+# Alterar o nome e url do Prometheus Windows Exporter conforme o seu cenário
+jobs:
+  - name: ptispo01dt002
+    url: http://172.16.1.100:9182/metrics
